Updated links to deployed projects

--- a/index.html
+++ b/index.html
@@ -164,14 +164,16 @@
           <div class="filter">
             <ul id="filters">
               <li><a href="#" data-filter="*" class="current">ALL</a></li>
-              <li><a href="#" data-filter=".apps">APPS</a></li>
-              <li><a href="#" data-filter=".me">ME</a></li>
-              <li><a href="#" data-filter=".websites">WEBSITES</a></li>
+              <li><a href="#" data-filter=".react">REACT</a></li>
+              <li><a href="#" data-filter=".react-native">REACT NATIVE</a></li>
+              <li><a href="#" data-filter=".vanilla">VANILLA JS</a></li>
+              <li><a href="#" data-filter=".flask">FLASK</a></li>
+              <li><a href="#" data-filter=".django">DJANGO</a></li>
             </ul>
           </div>
           <div class="items-container">
             <ul class="items">
-              <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li onclick="" class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
                   <img src="img/portfolio-images/thumbnails/scales-of-justice-silhouette2.jpg">
 
@@ -181,15 +183,15 @@
                     data-caption="Would You Rather">
                       <i class="fa fa-search"></i
                     </a>
-                    <a href="https://github.com/colemanGH319" target="_blank" class="project-link">
+                    <a href="https://would-you-rather-mc.herokuapp.com/" target="_blank" class="project-link">
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
-                  <div class="image-overlay"></div>
+                  <div class="image-overlay">Would You Rather?</div>
                 </div>
               </li>
 
-              <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li onclick="" class="react-native col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
                   <img src="img/portfolio-images/thumbnails/studying.jpg">
 
@@ -199,15 +201,15 @@
                     data-caption="Mobile-Flashcards">
                       <i class="fa fa-search"></i
                     </a>
-                    <a href="https://github.com/colemanGH319" target="_blank" class="project-link">
+                    <a href="https://snack.expo.io/@colemanrnative/bW9iaW" target="_blank" class="project-link">
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
-                  <div class="image-overlay"></div>
+                  <div class="image-overlay">Mobile Flashcards</div>
                 </div>
               </li>
 
-              <li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li onclick="" class="react col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
                   <img src="img/portfolio-images/thumbnails/bookshelf.jpg">
 
@@ -217,15 +219,15 @@
                     data-caption="My-Reads">
                       <i class="fa fa-search"></i
                     </a>
-                    <a href="https://github.com/colemanGH319" target="_blank" class="project-link">
+                    <a href="https://my-reads-mc.herokuapp.com/" target="_blank" class="project-link">
                       <i class="fa fa-link"></i>
                     </a>
                   </div>
-                  <div class="image-overlay"></div>
+                  <div class="image-overlay">My Reads</div>
                 </div>
               </li>
-
-              <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+<!-- 
+              <li onclick="" class="flask col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
                   <img src="img/portfolio-images/thumbnails/metrics.jpg">
 
@@ -243,7 +245,7 @@
                 </div>
               </li>
 
-              <li onclick="" class="me col-xs-6 col-sm-4 col-md-3 col-lg-3">
+              <li onclick="" class="react django col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <div class="item">
                   <img src="img/portfolio-images/thumbnails/car.jpg">
 
@@ -259,7 +261,7 @@
                   </div>
                   <div class="image-overlay"></div>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
