Updated skills section

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
           </div>
           <div class="col-md-7">
             <h4>About Me</h4>
-            <p>Hi there! I'm Matthew Coleman (just "Matt" is fine) and I'm a Software
+            <p>Hi there! I'm Matt Coleman and I'm a Software
             Engineer from Brooklyn, New York. I primarily focus on Web Development and
             I have several web and mobile applications in my portfolio. My preferred
             programming languages are JavaScript and Python; I have worked with
             various libraries and frameworks within their respective ecosystems, such as
-            React, Flask, Django and jQuery.</p>
+            React, Redux, Flask, Django and jQuery.</p>
             <p>
             Prior to working in tech, I spent 5
             years in various supply chain and inventory management roles for several
@@ -116,8 +116,8 @@
           </div>
           <div class="owl-carousel owl-theme">
             <div class="skill">
-              <span class="chart" data-percent="72">
-                <span class="percent">72</span>
+              <span class="chart" data-percent="90">
+                <span class="percent">90</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>Python</h4>
@@ -126,8 +126,8 @@
             </div>
 
             <div class="skill">
-              <span class="chart" data-percent="65">
-                <span class="percent">65</span>
+              <span class="chart" data-percent="80">
+                <span class="percent">80</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>JavaScript</h4>
@@ -136,8 +136,8 @@
             </div>
 
             <div class="skill">
-              <span class="chart" data-percent="60">
-                <span class="percent">60</span>
+              <span class="chart" data-percent="85">
+                <span class="percent">85</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>HTML</h4>
@@ -145,8 +145,8 @@
             </div>
 
             <div class="skill">
-              <span class="chart" data-percent="45">
-                <span class="percent">45</span>
+              <span class="chart" data-percent="75">
+                <span class="percent">75</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>CSS</h4>
@@ -154,8 +154,8 @@
             </div>
 
             <div class="skill">
-              <span class="chart" data-percent="50">
-                <span class="percent">50</span>
+              <span class="chart" data-percent="85">
+                <span class="percent">85</span>
                 <canvas height="152" width="152"></canvas>
               </span>
               <h4>PostgreSQL</h4>
